--- a/css/app.css
+++ b/css/app.css
@@ -58,12 +58,31 @@ button {
       top: 50%;
       left: 50%;
       border: 2px solid #000;
-			width: 480px;
-			height: 640px;
+			max-width: 720px;
+      max-height: 960px;
+      height: 100%;
+      width: auto
       -ms-transform: translate(-50%, -50%);
       -webkit-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);*/
     }
+
+    aside.game > section {
+      /*position: relative;
+      padding-bottom: 75%;
+      padding-top: 35px;
+      height: 0;
+      overflow: hidden;*/
+    }
+
+    /*aside.game > section .canvas {
+      position: absolute;
+      top:50%;
+      left: 50%;
+      width: 100%;
+      max-width: 100%;
+      height: 100%;
+    }*/
 
   header {
     background-color: #424242;
